[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/menu_button.tres" type="Theme" id=3]
[ext_resource path="res://script/ui/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://script/ui/rich_text_siny.gd" type="Script" id=5]
[ext_resource path="res://sound/focus_in.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/press_button.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.596078 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="RichTextEffect" id=2]
script = ExtResource( 5 )

[node name="PauseScreen" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 452.0
margin_top = 231.0
margin_right = 572.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 45.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "pause"
text = "pause"
fit_content_height = true
custom_effects = [ SubResource( 2 ) ]

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 120.0
margin_bottom = 53.0

[node name="Resume" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 57.0
margin_right = 120.0
margin_bottom = 81.0
hint_tooltip = "Resume paused game"
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "resume"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 120.0
margin_bottom = 81.0
hint_tooltip = "View or change game configuration"
focus_mode = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "settings"

[node name="QuitToMenu" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 120.0
margin_bottom = 109.0
hint_tooltip = "Return to title screen"
focus_mode = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "quit to menu"

[node name="QuitToDesktop" type="Button" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 120.0
margin_bottom = 137.0
hint_tooltip = "Exit from application to operating system"
focus_mode = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "quit to desktop"

[node name="PressButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
bus = "UI"

[node name="FocusIn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "UI"

[connection signal="mouse_entered" from="VBoxContainer/Resume" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitToMenu" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_QuitToMenu_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitToDesktop" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktop" to="." method="_on_QuitToDesktop_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktop" to="." method="_on_Button_pressed"]
